Initial structure for dashboard

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -454,7 +454,7 @@ pre {
 }
 
 body {
-  color: #757763;
+  color: #263238;
   font-size: 1em;
   font-weight: 400;
   line-height: 1.5;
@@ -521,7 +521,7 @@ fieldset {
 pre {
   -webkit-overflow-scrolling: touch;
   background-color: whitesmoke;
-  color: #757763;
+  color: #263238;
   font-size: 0.875em;
   overflow-x: auto;
   padding: 1.25rem 1.5rem;
@@ -556,7 +556,7 @@ table th {
   background-color: white;
   border-radius: 6px;
   box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
-  color: #757763;
+  color: #263238;
   display: block;
   padding: 1.25rem;
 }
@@ -631,14 +631,14 @@ a.box:active {
 
 .button:active,
 .button.is-active {
-  border-color: #757763;
+  border-color: #263238;
   color: #363636;
 }
 
 .button.is-text {
   background-color: transparent;
   border-color: transparent;
-  color: #757763;
+  color: #263238;
   text-decoration: underline;
 }
 
@@ -2692,15 +2692,15 @@ fieldset[disabled] .button {
 }
 
 .progress::-webkit-progress-value {
-  background-color: #757763;
+  background-color: #263238;
 }
 
 .progress::-moz-progress-bar {
-  background-color: #757763;
+  background-color: #263238;
 }
 
 .progress::-ms-fill {
-  background-color: #757763;
+  background-color: #263238;
   border: none;
 }
 
@@ -2874,7 +2874,7 @@ fieldset[disabled] .button {
   -webkit-animation-timing-function: linear;
           animation-timing-function: linear;
   background-color: #ededed;
-  background-image: linear-gradient(to right, #757763 30%, #ededed 30%);
+  background-image: linear-gradient(to right, #263238 30%, #ededed 30%);
   background-position: top left;
   background-repeat: no-repeat;
   background-size: 150% 150%;
@@ -3197,7 +3197,7 @@ fieldset[disabled] .button {
   align-items: center;
   background-color: whitesmoke;
   border-radius: 4px;
-  color: #757763;
+  color: #263238;
   display: inline-flex;
   font-size: 0.75rem;
   height: 2em;
@@ -3442,7 +3442,7 @@ a.tag:hover {
 }
 
 .subtitle {
-  color: #757763;
+  color: #263238;
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.25;
@@ -4636,7 +4636,7 @@ fieldset[disabled] .select select:hover {
 
 .file-cta {
   background-color: whitesmoke;
-  color: #757763;
+  color: #263238;
 }
 
 .file-name {
@@ -4952,7 +4952,7 @@ fieldset[disabled] .select select:hover {
 .control.has-icons-left .select:focus ~ .icon,
 .control.has-icons-right .input:focus ~ .icon,
 .control.has-icons-right .select:focus ~ .icon {
-  color: #757763;
+  color: #263238;
 }
 
 .control.has-icons-left .input.is-small ~ .icon,
@@ -5121,7 +5121,7 @@ fieldset[disabled] .select select:hover {
   background-color: white;
   border-radius: 0.25rem;
   box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
-  color: #757763;
+  color: #263238;
   max-width: 100%;
   overflow: hidden;
   position: relative;
@@ -5232,7 +5232,7 @@ fieldset[disabled] .select select:hover {
 }
 
 .dropdown-item {
-  color: #757763;
+  color: #263238;
   display: block;
   font-size: 0.875rem;
   line-height: 1.5;
@@ -5471,7 +5471,7 @@ button.dropdown-item.is-active {
 
 .menu-list a {
   border-radius: 2px;
-  color: #757763;
+  color: #263238;
   display: block;
   padding: 0.5em 0.75em;
 }
@@ -5672,7 +5672,7 @@ button.dropdown-item.is-active {
 
 .message-header {
   align-items: center;
-  background-color: #757763;
+  background-color: #263238;
   border-radius: 4px 4px 0 0;
   color: #fff;
   display: flex;
@@ -5700,7 +5700,7 @@ button.dropdown-item.is-active {
   border-radius: 4px;
   border-style: solid;
   border-width: 0 0 0 4px;
-  color: #757763;
+  color: #263238;
   padding: 1.25em 1.5em;
 }
 
@@ -6579,7 +6579,7 @@ body.has-navbar-fixed-bottom {
 }
 
 .navbar-burger {
-  color: #757763;
+  color: #263238;
   cursor: pointer;
   display: block;
   height: 3.25rem;
@@ -6635,7 +6635,7 @@ body.has-navbar-fixed-bottom {
 
 .navbar-item,
 .navbar-link {
-  color: #757763;
+  color: #263238;
   display: block;
   line-height: 1.5;
   padding: 0.5rem 0.75rem;
@@ -7386,12 +7386,12 @@ a.navbar-item.is-active,
 }
 
 .panel-tabs a.is-active {
-  border-bottom-color: #757763;
+  border-bottom-color: #263238;
   color: #363636;
 }
 
 .panel-list a {
-  color: #757763;
+  color: #263238;
 }
 
 .panel-list a:hover {
@@ -7477,7 +7477,7 @@ label.panel-block:hover {
   border-bottom-color: #dbdbdb;
   border-bottom-style: solid;
   border-bottom-width: 1px;
-  color: #757763;
+  color: #263238;
   display: flex;
   justify-content: center;
   margin-bottom: -1px;
@@ -9523,11 +9523,11 @@ a.has-text-danger-dark:focus {
 }
 
 .has-text-grey-dark {
-  color: #757763 !important;
+  color: #263238 !important;
 }
 
 .has-background-grey-dark {
-  background-color: #757763 !important;
+  background-color: #263238 !important;
 }
 
 .has-text-grey {
@@ -11809,5 +11809,17 @@ a.has-text-danger-dark:focus {
 .footer {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem;
+}
+
+.custom-sidebar {
+  background: #f44336;
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.64);
+}
+
+html,
+body,
+#app,
+.main-content-custom {
+  height: 100%;
 }
 
