More styles for sidebar

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -29,3 +29,5 @@ $input-shadow: none;
 // Custom styles
 @import "./custom-styles/sidebar";
 @import "./custom-styles/main";
+@import "./custom-styles/menu";
+
