--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11823,3 +11823,27 @@ body,
   height: 100%;
 }
 
+.custom-menu-list-item {
+  background: #ffffff;
+  margin-top: 5px;
+  transition: 1s;
+}
+
+.custom-menu-list-item:hover {
+  opacity: 0.8;
+}
+
+.custom-menu-label {
+  color: #263238;
+}
+
+.custom-menu-user-container {
+  background: white;
+  border-radius: 2px;
+  display: flex;
+  justify-content: center;
+  padding-top: 15px;
+  align-items: center;
+  box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.62);
+}
+
