--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,33 +1,4 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
-// Set your brand colors
-$purple: #ab47bc;
-$red: #f44336;
-$soft-black: #263238;
-$beige-light: #eeeeee;
-$beige-lighter: #eff0eb;
-
-// Update Bulma's global variables
-$family-sans-serif: 'Nunito', sans-serif;
-$grey-dark: $soft-black;
-$grey-light: $beige-light;
-$primary: $purple;
-$link: $red;
-$widescreen-enabled: false;
-$fullhd-enabled: false;
-
-// Update some of Bulma's component variables
-$body-background-color: $beige-lighter;
-$control-border-width: 2px;
-$input-border-color: transparent;
-$input-shadow: none;
-
-// Bulma
-@import "~bulma/bulma.sass";
-
-// Custom styles
-@import "./custom-styles/sidebar";
-@import "./custom-styles/main";
-@import "./custom-styles/menu";
-
+@import "~bootstrap/scss/bootstrap";
