--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10903,3 +10903,42 @@ a.text-dark:focus {
   }
 }
 
+.sidebar {
+  position: fixed;
+  top: 0px;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  padding: 20px 20px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  border-right: 1px solid #eee;
+  width: 250px;
+  box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.34);
+}
+
+.sidebar .user-info {
+  height: 80px;
+  box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.34);
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-header {
+  margin-left: 230px;
+  box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.34);
+}
+
+.sidebar .nav-item {
+  width: 100%;
+}
+
+@media (min-width: 250px) {
+  .ml-sm-auto,
+  .mx-sm-auto {
+    margin-left: auto !important;
+  }
+}
+
