--- a/resources/sass/menu.scss
+++ b/resources/sass/menu.scss
@@ -1,25 +1,40 @@
-.custom-menu-list-item {
-    background: #ffffff;
-    margin-top: 5px;
-    transition: 1s;
+.sidebar {
+    position: fixed;
+    top: 0px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    padding: 20px 20px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    border-right: 1px solid #eee;
+    width: 250px;
+    -webkit-box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.34);
+    box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.34);
+
+    .user-info {
+        height: 80px;
+        -webkit-box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.34);
+        box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.34);
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
-.custom-menu-list-item:hover {
-    opacity: 0.8;
+.main-header {
+    margin-left: 230px;
+    -webkit-box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.34);
+    box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.34);
 }
 
-
-.custom-menu-label {
-    color: $soft-black;
+.sidebar .nav-item {
+    width: 100%;
 }
 
-.custom-menu-user-container {
-    background: white;
-    border-radius: 2px;
-    display: flex;
-    justify-content: center;
-    padding-top: 15px;
-    align-items: center;
-    -webkit-box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.62);
-    box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.62);
+@media (min-width: 250px)  {
+    .ml-sm-auto, .mx-sm-auto {
+        margin-left: auto !important;
+    }
 }
