--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,5 +3,7 @@
 
 @import "~bootstrap/scss/bootstrap";
 @import "buttons/sidebarToggle";
+@import "main";
+@import "ar-container";
 @import "sidebar";
 @import "content";
