--- a/resources/sass/sidebar.scss
+++ b/resources/sass/sidebar.scss
@@ -4,6 +4,16 @@
     padding: 1.25rem;
 }
 
+.user-info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    height: 80px;
+    -webkit-box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.25);
+}
+
 .sidebar-panel {
     -webkit-box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.34);
     box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.34);
@@ -40,6 +50,7 @@
 
 /* Switcher */
 #sidebar {
+    padding-top: 5px;
     width: 280px;
     position: fixed;
     top: 0;
