--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11089,3 +11089,38 @@ body,
   }
 }
 
+.drag-container {
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  min-height: 900px;
+  position: relative;
+  overflow: auto;
+}
+
+.drag-box {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  position: absolute;
+  margin: 5px;
+  max-height: 200px;
+  max-width: 250px;
+  min-height: 50px;
+  min-width: 90px;
+  height: 100%;
+  width: 100%;
+  box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.25);
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+  border-radius: 5px;
+  align-items: center;
+  justify-content: center;
+}
+
+.drag-box-dropped {
+  transition: 0.3s;
+  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.6);
+}
+
