--- a/resources/sass/scenarioConstructor/dragBox.scss
+++ b/resources/sass/scenarioConstructor/dragBox.scss
@@ -1,10 +1,27 @@
 .drag-container {
     z-index: 0;
-    width: 100%;
+    width: calc(100% - 250px);
     height: 100%;
-    min-height: 900px;
+    min-height: 650px;
     position: relative;
     overflow: auto;
+
+    .lines {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        stroke-linecap: round;
+        z-index: 100;
+    }
+}
+
+.palette {
+    .palette-inner {
+        .create-line-btn {
+            display: none;
+        }
+    }
 }
 
 .drag-box {
@@ -15,14 +32,48 @@
     max-width: 250px;
     min-height: 50px;
     min-width: 90px;
-    height: 100%;
-    width: 100%;
+    height: 130px;
+    width: 220px;
     -webkit-box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.25);
     box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.25);
     cursor: grabbing;
     border-radius: 5px;
     align-items: center;
     justify-content: center;
+
+    .create-line-btn {
+        position: absolute;
+        height: 15px;
+        width: 15px;;
+        border-radius: 50%;
+        transition: 1s;
+    }
+
+    .one {
+        left: 100px;
+        top: -10px;
+    }
+    .two {
+        left: 100px;
+        top: 125px;
+    }
+    .three {
+        left: 215px;
+        top: 55px;
+    }
+    .four {
+        left: -10px;
+        top: 55px;
+    }
+
+    &:hover {
+        .create-line-btn {
+            background-color: #1a202c;
+            cursor: pointer;
+            -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.34);
+            box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.34);
+        }
+    }
 }
 
 .drag-box-dropped {
