--- a/resources/sass/sidebar.scss
+++ b/resources/sass/sidebar.scss
@@ -1,9 +1,5 @@
 @import "~bootstrap/scss/variables";
 
-.sidebar-content {
-    padding: 1.25rem;
-}
-
 .user-info {
     display: flex;
     align-items: center;
@@ -14,44 +10,10 @@
     box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.25);
 }
 
-.sidebar-panel {
-    -webkit-box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.34);
-    box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.34);
-    margin-bottom: 1.25rem;
-    border-radius: 0.25rem;
-    background-color: $white;
-
-    & .panel-title {
-        border-bottom: 1px solid $gray-500;
-        position: relative;
-        padding: 0.8rem 1rem;
-
-        & span {
-            display: block;
-            text-transform: capitalize;
-            font-weight: 500;
-        }
-    }
-
-    & .panel-content {
-        position: relative;
-
-        & .nav .nav-item > .nav-link {
-            color: $gray-800;
-            border-bottom: 1px solid $white;
-            transition: background 0.15s, color 0.15s;
-
-            &:hover, &.active {
-                background-color: $gray-200;
-            }
-        }
-    }
-}
-
 /* Switcher */
 #sidebar {
-    padding-top: 5px;
-    width: 280px;
+    padding: 15px;
+    width: 230px;
     position: fixed;
     top: 0;
     left: 0;
